fix font and margin bottom

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
   <title>Raduno cantonale mini pompieri</title>
 
   <link rel="stylesheet" href="style.css">
+  
+  <!-- Preso stesso font pompieri.ch -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
@@ -66,7 +72,7 @@
   <h2 class="mb-4 pt-3 text-sez fade-up">Programma del raduno</h2>
   <div class="grid">
     <div class="col-100">
-      <ul class="elenco text-center text-ul fade-up">
+      <ul class="elenco text-center text-ul mb-4 fade-up">
         <li>Ore 08:30: Arrivo partecipanti</li>
         <li>Ore 09:30: Inizio gare</li>
         <li>Dalle 11:00: Griglia in funzione</li>
@@ -87,21 +93,21 @@
       <h2 class="mb-4 pt-3 text-sez fade-up">Attività aperte al pubblico</h2>
       <div class="fade-up">
         <h3 class="text-3">Porte aperte della caserma</h3>
-        <p class="mb-3">In concomitanza con il Raduno cantonale dei mini pompieri 2024, la Caserma dei Pompieri della Città di Bellinzona apre le sue porte. Un'occasione d'oro per dare un'occhiata da vicino ai veicoli e all'equipaggiamento dei pompieri e visitare gli spazi della caserma.</p>
+        <p class="mb-3">In concomitanza con il Raduno cantonale dei mini pompieri 2024, la Caserma dei Pompieri della Città di Bellinzona apre le sue porte. Un'occasione d'oro per dare un'occhiata da vicino ai veicoli e all'equipaggiamento dei pompieri e visitare gli spazi della caserma</p>
       </div>
 
       <div class="fade-up">
         <h3>Postazioni partner di intervento</h3>
-        <p class="mb-3">Durante la giornata diversi partner di intervento (Croce Verde di Bellinzona, Polizia Comunale, Protezione Civile, Società Protezione Animali Bellinzona, ecc.) saranno presenti con una postazione e i loro mezzi. </p>
+        <p class="mb-3">Durante la giornata diversi partner di intervento (Croce Verde di Bellinzona, Polizia Comunale, Protezione Civile, Società Protezione Animali Bellinzona, ecc.) saranno presenti con una postazione e i loro mezzi </p>
       </div>
       <div class="fade-up">
         <h3>Drink & Grill</h3>
-        <p class="mb-3">Sarà inoltre attiva una fornita buvette e l'associazione <i>Amici dei Pompieri</i> vi accoglierà con una ricca griglia e cucina calda.</p>
+        <p class="mb-3">Sarà inoltre attiva una fornita buvette e l'associazione <i>Amici dei Pompieri</i> vi accoglierà con una ricca griglia e cucina calda</p>
       </div>
 
       <div class="fade-up">
         <h3>Area bambini</h3>
-        <p>L'immancabile Gonfiabile dei pompieri intratterrà i più piccoli in un'area gioco a loro predisposta. Sarà inoltre presente la parete di arrampicata e….</p>
+        <p class="mb-4">L'immancabile Gonfiabile dei pompieri intratterrà i più piccoli in un'area gioco a loro predisposta. Sarà inoltre presente la parete di arrampicata e…</p>
       </div>
     </div>
   </div>
@@ -115,9 +121,9 @@
 <div id="radio" class="sez sez__h50">
   <h2 class="mb-4 pt-3 text-sez fade-up">Radio raduno 2024</h2>
     <div class="fade-up">
-      <p>Ascolta la radio del Raduno cantonale mini pompieri 2024.</p> 
-      <p>Sintonizzati e segui le gare in diretta.</p>
-      <a class="button mt-2" href="http://">Pagina web radio</a>
+      <p>Ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
+      <p>Sintonizzati e segui le gare in diretta</p>
+      <a class="button mt-2 mb-4" href="http://">Pagina web radio</a>
     </div>
 </div>
 
@@ -130,9 +136,9 @@
   <h2 class="mb-4 pt-3 text-sez fade-up">Social</h2>
   <div class="fade-up">
     <p>Ti è piaciuto il pranzo? <br>
-        Seguici per restare aggiornato sulle manifestazioni alle quali siamo presenti.
+        Seguici per restare aggiornato sulle manifestazioni alle quali siamo presenti
       </p>
-      <div class="button-container mb-2">
+      <div class="button-container mb-4">
         <a class="button-outline mt-2" href="http://">@amicideipompieri <br> Instagram</a> 
         <a class="button-outline mt-2" href="http://">@amicideipompieri <br> Facebook</a>
       </div>
