add font for minipompieri

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>Raduno cantonale mini pompieri</title>
 
   <link rel="stylesheet" href="style.css">
-  
-  <!-- Preso stesso font pompieri.ch -->
+
+  <!-- Font per scritta minipompieri -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik+Dirt&display=swap" rel="stylesheet">
+  
 
   <!-- Font Monserrat - usato di default dai pompieri -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -61,7 +62,7 @@
         </div>
 
         <h2 class="text-uppercase text-center text-title mt-3 fade-in">Raduno cantonale</h2>
-        <h1 class="text-uppercase text-center text-red text-title fade-in">Mini pompieri</h1>
+        <h1 class="text-uppercase text-center text-red text-title minipompieri fade-in">Mini pompieri</h1>
       </div>
       <div class="strip-red mr-0 ml-0">
         <h2 class="text-uppercase text-subtitle text-center mb-0 fade-in">Parco urbano Bellinzona</h2>
