add some contents

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
         <!-- <img src="icons/instagram.svg" alt=""> -->
       </a>
       <ul class="header__menu">
-        <li><a href="#raduno"><b>Raduno</b></a></li>
+        <!-- <li><a href="#raduno"><b>Raduno</b></a></li> -->
         <li><a href="#programma"><b>Programma</b></a></li>
         <li><a href="#attivita"><b>Attività</b></a></li>
+        <li><a href="#luogo"><b>Luogo</b></a></li>
         <li><a href="#radio"><b>Radio</b></a></li>
         <li><a href="#social"><b>Social</b></a></li>
         </ul>
@@ -75,16 +76,19 @@
 
 <!-- @note Programma -->
 <div id="programma" class="sez sez__h50">
-  <h2 class="mb-4 pt-3 text-sez fade-up">Programma del raduno</h2>
+  <h2 class="mb-4 pt-3 text-sez fade-up">Programma</h2>
   <div class="grid">
     <div class="col-100">
       <ul class="elenco text-center text-ul mb-4 fade-up">
-        <li>Ore 08:30: Arrivo partecipanti</li>
-        <li>Ore 09:30: Inizio gare</li>
-        <li>Dalle 11:00: Griglia in funzione</li>
-        <li>Ore 13:30: Ripresa gare</li>
+        <li>Ore 08:30 Arrivo partecipanti</li>
+        <li>Ore 09:00 Inizio attività</li>
+        <li>Datte 10:00 Porte aperte della caserma</li>
+        <li>Dalle 11:00 Griglia in funzione</li>
+        <li>Ore 13:30 Ripresa gare</li>
         <li>Ore 16:30 Premiazione</li>
+        <li>Ore 17:00 Fine della manifestazione</li>
       </ul>
+      <p class="fade-up mb-4">In caso di brutto tempo, è previsto un programma ridotto e le porte aperte della caserma saranno annullate</p>
     </div>
   </div>
 </div>
@@ -122,49 +126,91 @@
 <!-- @note Sez Img -->
   <div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/img2.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
 
-
-<!-- @note Radio -->
-<div id="radio" class="sez sez__h50">
-  <h2 class="mb-4 pt-3 text-sez fade-up">Radio raduno 2024</h2>
-    <div class="fade-up">
-      <p>Ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
-      <p>Sintonizzati e segui le gare in diretta</p>
-      <a class="button mt-2 mb-4" href="http://">Pagina web radio</a>
+<!-- @note Come raggiungerci -->
+<div id="luogo" class="sez sez__h50">
+  <div class="grid mb-4">
+    <div class="col-100">
+      <h2 class="mb-4 pt-3 text-sez fade-up">Come raggiungerci</h2>
+      <div class="fade-up">
+        <h3>Con i mezzi di trasporto pubblici</h3>
+        <p class="mb-3">Dalla stazione FFS di Bellinzona è possibile raggiungere il Parco Urbano tramite la <b>linea 2</b> del Trasporto Pubblico Bellinzonese, fermata "<b>Bagno Pubblico</b>"</p>
+      </div>
+      <div class="fade-up">
+        <h3>Con i mezzi privati</h3>
+        <p class="mb-3">Sarà possibile parcheggiare nei parcheggi pubblici nei pressi del Parco Urbano
+        <ul class="elenco text-center text-4">
+          <li>Parcheggio Ex-Stallone</li>
+          <li>Parcheggio Centro sportivo</li>
+          <li>Parcheggio Via Vela</li>
+        </ul>
+        </p>
+      </div>
     </div>
+  </div>
 </div>
+
 
 <!-- @note Sez Img -->
 <div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/img3.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
 
+  <!-- @note Radio -->
+<div id="radio" class="sez sez__h50 sez__red">
+  <h2 class="mb-4 pt-3 text-sez fade-up">Radio raduno 2024</h2>
+    <div class="fade-up">
+
+      <p>Domenica 25 agosto ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
+      <p>Sintonizzati e segui le gare in diretta</p>
+      <a class="button-outline mt-2 mb-4" href="http://">Pagina web radio</a>
+    </div>
+</div>
+
+<!-- @note Sez Img -->
+<div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/img4.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
+
 
 <!-- @note Sezione 3 -->
-<div id="social" class="sez sez__h50 sez__red">
+<div id="social" class="sez sez__h50">
   <h2 class="mb-4 pt-3 text-sez fade-up">Social</h2>
   <div class="fade-up">
     <p>Ti è piaciuto il pranzo? <br>
         Seguici per restare aggiornato sulle manifestazioni alle quali siamo presenti
       </p>
       <div class="button-container mb-4">
-        <a class="button-outline mt-2" href="http://">@amicideipompieri <br> Instagram</a> 
-        <a class="button-outline mt-2" href="http://">@amicideipompieri <br> Facebook</a>
+        <a class="button mt-2" href="https://www.instagram.com/amicideipompieri">@amicideipompieri <br> Instagram</a> 
+        <a class="button mt-2" href="https://www.facebook.com/amicideipompieribellinzona">@amicideipompieri <br> Facebook</a>
       </div>
   </div>
 </div>
 
 <!-- @note Sez Img -->
-<div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/img4.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
+<div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/cover.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
 
 <!-- @note Sponsor -->
-<div class="sez sez__h25 pr-1 pl-1">
+<div class="grid grid--center mt-3 mb-2">
+  <div class="col-25 sma-50">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+  </div>
+  <div class="col-25 sma-50">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+  </div>
+  <div class="col-25 sma-50">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+  </div>
+  <div class="col-25 sma-50">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+  </div>
+</div>
 
-  <ul class="brands mt-2">
-    <li class="brands__item"><a href="#"><img src="img/logo_scc.png" alt="" /></a></li>
-    <li class="brands__item"><a href="#"><img src="img/logo_scc.png" alt="" /></a></li>
-    <li class="brands__item"><a href="#"><img src="img/logo_scc.png" alt="" /></a></li>
-    <li class="brands__item"><a href="#"><img src="img/logo_scc.png" alt="" /></a></li>
-    <li class="brands__item"><a href="#"><img src="img/logo_scc.png" alt="" /></a></li>
-    <li class="brands__item"><a href="#"><img src="img/logo_scc.png" alt="" /></a></li>
-  </ul>
+<div class="hr" ></div>
+
+<div class="grid grid--center mb-2">
+  <div class="col-25 v-center sma-100 text-center" style="justify-content: center;">
+    <p>Con il sostegno di</p>
+  </div>
+  <div class="col-25 sma-50">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/bellinzona.png" alt="">
+  </div>
+</div>
 
   <script>
   // scroll to menu
