--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2 class="mt-0 mb-0 fade-in">'24</h2>
           </div>
           <div class="img-container pt-0">
-            <img src="img/logo-pompieri.jpg" alt="" class="fade-in">   
+            <img src="img/logo-pompieri.jpeg" alt="" class="fade-in">   
           </div>
         </div>
 
@@ -69,7 +69,7 @@
         <h2 class="text-uppercase text-subtitle text-center mb-0 fade-in">Parco urbano Bellinzona</h2>
       </div>
       <div class="cover__content">
-        <p class="text-2 mt-3 fade-in">Con porte aperte della caserama dei pompieri</p>
+        <p class="text-2 mt-3 fade-in">Con porte aperte della caserma dei pompieri</p>
       </div>
     </div>
   </div>
@@ -82,7 +82,7 @@
       <ul class="elenco text-center text-ul mb-4 fade-up">
         <li>Ore 08:30 Arrivo partecipanti</li>
         <li>Ore 09:00 Inizio attività</li>
-        <li>Datte 10:00 Porte aperte della caserma</li>
+        <li>Dalle 10:00 Porte aperte della caserma</li>
         <li>Dalle 11:00 Griglia in funzione</li>
         <li>Ore 13:30 Ripresa gare</li>
         <li>Ore 16:30 Premiazione</li>
@@ -160,12 +160,12 @@
 
       <p>Domenica 25 agosto ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
       <p>Sintonizzati e segui le gare in diretta</p>
-      <a class="button-outline mt-2 mb-4" href="http://">Pagina web radio</a>
+      
     </div>
 </div>
 
 <!-- @note Sez Img -->
-<div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/img4.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
+<div id="sez-img" class="sez sez__h40 cover--image" style="background: url(img/f11.png) no-repeat center center; background-size:cover; height: 100px;"></div>
 
 
 <!-- @note Sezione 3 -->
@@ -188,16 +188,16 @@
 <!-- @note Sponsor -->
 <div class="grid grid--center mt-3 mb-2">
   <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
   </div>
   <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
   </div>
   <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
   </div>
   <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo_scc.png" alt="">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
   </div>
 </div>
 
