fix text and add sponsor logo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <li>Ore 09:00 Inizio attività</li>
         <li>Dalle 10:00 Porte aperte della caserma</li>
         <li>Dalle 11:00 Griglia in funzione</li>
-        <li>Ore 13:30 Ripresa gare</li>
+        <li>Ore 13:30 Ripresa attività</li>
         <li>Ore 16:30 Premiazione</li>
         <li>Ore 17:00 Fine della manifestazione</li>
       </ul>
@@ -104,12 +104,12 @@
       </div>
       <div class="fade-up">
         <h3>Drink & Grill</h3>
-        <p class="mb-3">Sarà inoltre attiva una fornita buvette e l'associazione <i>Amici dei Pompieri</i> vi accoglierà con una ricca griglia e cucina calda</p>
+        <p class="mb-3">Sarà inoltre attiva una fornita buvette e ti accoglieremo con una ricca griglia e cucina calda</p>
       </div>
 
       <div class="fade-up">
         <h3>Area bambini</h3>
-        <p class="mb-4">L'immancabile Gonfiabile dei pompieri intratterrà i più piccoli in un'area gioco a loro predisposta. Sarà inoltre presente la parete di arrampicata e…</p>
+        <p class="mb-4">L'immancabile Gonfiabile dei pompieri intratterrà i più piccoli in un'area gioco a loro predisposta. Sono inoltre previste attività per bambini a tema pompieristico</p>
       </div>
     </div>
   </div>
@@ -129,8 +129,8 @@
       </div>
       <div class="fade-up">
         <h3>Con i mezzi privati</h3>
-        <p class="mb-3">Sarà possibile parcheggiare nei parcheggi pubblici nei pressi del Parco Urbano
-        <ul class="elenco text-center text-4">
+        <p class="mb-1">Sarà possibile parcheggiare nei parcheggi pubblici nei pressi del Parco Urbano
+        <ul class="elenco text-center text-ul">
           <li>Parcheggio Ex-Stallone</li>
           <li>Parcheggio Centro sportivo</li>
           <li>Parcheggio Via Vela</li>
@@ -169,7 +169,7 @@
       </p>
 
       <div class="mb-4 mt-4">
-        <a href="https://www.instagram.com/amicideipompieri" class="svg-button" style="margin-right: 20px;"></a> <a href="https://www.facebook.com/amicideipompieribellinzona" class="svg-button-f" style="margin-left: 20px;"></a>
+        <a href="https://www.instagram.com/amicideipompieri" class="svg-button" style="margin-right: 15px;"></a> <a href="https://www.facebook.com/amicideipompieribellinzona" class="svg-button-f" style="margin-left: 15px;"></a>
       </div>
 
 
@@ -186,7 +186,7 @@
     <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
   </div>
   <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
+    <img class="img-res-mini" style="margin-top: 12px ; display: block;" src="img/logo-bps.jpg" alt="">
   </div>
   <div class="col-25 sma-50">
     <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
