add logos and minor fix

--- a/index.html
+++ b/index.html
@@ -69,18 +69,23 @@
 <!-- @note Programma -->
 <div id="programma" class="sez sez__h50">
   <h2 class="mb-4 pt-3 text-sez fade-up">Programma</h2>
-  <div class="grid">
-    <div class="col-100">
+  <div class="grid ordine-inverso" style="align-items: center">
+    <div class="col-40 sma-50">
+      <div class="img-container" style="width: 100%">
+        <img src="img/logo-minipompieri.jpg" alt="">
+      </div>
+    </div>
+    <div class="col-60 sma-100">
       <ul class="elenco text-center text-ul mb-4 fade-up">
         <li>Ore 08:30 Arrivo partecipanti</li>
         <li>Ore 09:00 Inizio attività</li>
         <li>Dalle 10:00 Porte aperte della caserma</li>
-        <li>Dalle 11:00 Griglia in funzione</li>
+        <li>Dalle 11:30 Griglia in funzione</li>
         <li>Ore 13:30 Ripresa attività</li>
         <li>Ore 16:30 Premiazione</li>
         <li>Ore 17:00 Fine della manifestazione</li>
       </ul>
-      <p class="fade-up mb-4">In caso di brutto tempo, è previsto un programma ridotto e le porte aperte della caserma saranno annullate</p>
+      <p class="fade-up mb-4">In caso di brutto tempo, è previsto un programma ridotto solo per gli iscritti e le porte aperte della caserma saranno annullate</p>
     </div>
   </div>
 </div>
@@ -104,12 +109,12 @@
       </div>
       <div class="fade-up">
         <h3>Drink & Grill</h3>
-        <p class="mb-3">Sarà inoltre attiva una fornita buvette e ti accoglieremo con una ricca griglia e cucina calda</p>
+        <p class="mb-3">Sarà inoltre attiva una fornita buvette e ti accoglieremo con una ricca griglia</p>
       </div>
 
       <div class="fade-up">
         <h3>Area bambini</h3>
-        <p class="mb-4">L'immancabile Gonfiabile dei pompieri intratterrà i più piccoli in un'area gioco a loro predisposta. Sono inoltre previste attività per bambini a tema pompieristico</p>
+        <p class="mb-4">L'immancabile gonfiabile dei pompieri intratterrà i più piccoli in un'area gioco a loro dedicata. Sono inoltre previste attività per bambini a tema pompieristico</p>
       </div>
     </div>
   </div>
@@ -181,18 +186,16 @@
 <div id="sez-img" class="sez sez__h25 cover--image" style="background: url(img/cover.jpg) no-repeat center center; background-size:cover; height: 100px;"></div>
 
 <!-- @note Sponsor -->
-<div class="grid grid--center mt-3 mb-2">
-  <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
+
+<div class="grid mt-3 mb-2" style="align-items: center">
+  <div class="col-33 sma-100">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-metanord.jpeg" alt="">
   </div>
-  <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin-top: 12px ; display: block;" src="img/logo-bps.jpg" alt="">
+  <div class="col-33 grid--center sma-100">
+    <img class="img-res-mini" style="margin: auto ; display: block;" src="img/logo-mobiliare.png" alt="">
   </div>
-  <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
-  </div>
-  <div class="col-25 sma-50">
-    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-amb.jpg" alt="">
+  <div class="col-33 sma-100">
+    <img class="img-res-mini" style="margin: auto; display: block;" src="img/logo-bps.jpg" alt="">
   </div>
 </div>
 
