--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </div>
 
 <!-- @note Programma -->
-<div id="programma" class="sez sez__h50">
+<div id="programma" class="sez sez__h50 mb-4">
   <h2 class="mb-4 pt-3 text-sez fade-up">Programma</h2>
   <div class="grid ordine-inverso" style="align-items: center">
     <div class="col-40 sma-50">
