add player audio

--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
 
       <p>Domenica 25 agosto ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
       <p>Sintonizzati e segui le gare in diretta</p>
+      <div class="player">
+        <audio controls>
+            <source src="http://streaming.audio.adminnet.ch:8000/stream" type="audio/mpeg">
+        </audio>
+   </div> 
+
       
     </div>
 </div>
