--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
   <!-- @note Radio -->
 <div id="radio" class="sez sez__h50 sez__red">
   <h2 class="mb-4 pt-3 text-sez fade-up">Radio raduno 2024</h2>
-    <div class="fade-up">
+    <div class="fade-up mb-4">
 
       <p>Domenica 25 agosto ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
       <p>Sintonizzati e segui le gare in diretta</p>
@@ -161,11 +161,26 @@
         <audio controls>
             <source src="http://streaming.audio.adminnet.ch:8000/stream" type="audio/mpeg">
         </audio>
-   </div> 
-
+      </div> 
+      
+      <!-- @note Numeri di Telefono  -->
+      <h3 class="mt-4">Partecipa ai concorsi</h2>      
+      <div class="fisso">
+        <P>Linea Fissa | 091 261 50 26</P>
+      </div>
+      <div class="whatsapp">
+        <p>WhatsApp | 079 xxx xx xx</p>
+      </div>
       
     </div>
 </div>
+
+
+
+
+
+
+
 
 <!-- @note Sez Img -->
 <div id="sez-img" class="sez sez__h40 cover--image" style="background: url(img/f11.png) no-repeat center center; background-size:cover; height: 100px;"></div>
