--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
 
       <p>Domenica 25 agosto ascolta la radio del Raduno cantonale mini pompieri 2024</p> 
       <p>Sintonizzati e segui le gare in diretta</p>
-      <div class="player">
-        <audio controls>
-            <source src="http://streaming.audio.adminnet.ch:8000/stream" type="audio/mpeg">
-        </audio>
-      </div> 
       
+      <br>
+      <hr>
+      <br>
+
+
       <!-- @note Numeri di Telefono  -->
-      <h3 class="mt-4">Partecipa ai concorsi</h2>      
+      <h3>Partecipa ai concorsi</h2>      
       <div class="fisso">
         <P>Linea Fissa | 091 261 50 26</P>
       </div>
@@ -172,6 +172,12 @@
         <p>WhatsApp | 079 xxx xx xx</p>
       </div>
       
+      <div class="player">
+        <audio controls>
+            <source src="http://streaming.audio.adminnet.ch:8000/stream" type="audio/mpeg">
+        </audio>
+      </div> 
+
     </div>
 </div>
 
